src/scss/components/_tags.scss
//
// Tags
// -----------------------------------------------------------------------------

.tags {
  float: left;
  padding-top: .75rem;

  .button {
    display: inline-block;
    padding: .5rem;
    margin: 1rem .5rem 0;
    border: none;
    border-radius: 3px;
    background-color: #303030;
    color: #fefefe;
    font-size: 1rem;
    font-weight: 700;
  }

  .node {
    background-color: #5b5ea6;
    color: #fff;
  }

  .express {
    background-color: #b565a7;
  }

  .git {
    background-color: #dd4132;
  }

  .network {
    background-color: #6b5b95;
    color: #fff;
  }

  .webpack {
    background-color: #8ed6fb;
    color: #111;
  }

  .pwa {
    background-color: #6f9fd8;
  }

  .react {
    background-color: #282c34;
    color: #61dafb;
  }

  .vue {
    background-color: #00a591;
  }

  .js {
    background-color: #ecdb54;
    color: #000;
  }

  .cookbook {
    background-color: #eadedb;
    color: #333;
  }

  .css {
    background-color: #bc70a4;
  }

  .babel {
    background-color: #323330;
    color: #f5da55;
  }

  .gulp {
    background-color: #cf4647;
  }

  .services {
    background-color: #f7786b;
  }

  .libraries {
    background-color: #dd4132;
  }

  .go {
    background-color: #bfd641;
    color: #000;
  }

  .html,
  .softskills {
    background-color: #f2552c;
  }
}

